# fun-html

./: CHANGELOG.md  Cargo.toml  README.md  justfile  release.toml
.github/workflows/: check.yml
src/: attr.rs  attributes.rs  elements.rs  elt.rs  lib.rs  nodes.rs
src/interop/: maud_v026.rs  salvo_v074.rs  salvo_v076.rs
tests/: model_spec.rs  render_spec.rs  rocket_v05_spec.rs
