[package]
name = "fun-html"
version = "0.0.0"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/jcornaz/fun-html"
description = "HTML as a rust function!"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["html-escape/std"]
rocket_v05 = ["std", "dep:rocket_v05"]

[dependencies]
# Public
rocket_v05 = { package = "rocket", version = "0.5", default-features = false, optional = true }

# Private
html-escape = { version = "0.2", default-features = false }

[dev-dependencies]
rstest = { version = "0.23", default-features = false }
