[package]
name = "fun-html"
version = "1.1.0"
license = "MIT"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/jcornaz/fun-html"
description = "HTML as a rust function!"
categories = ["template-engine"]
keywords = ["html", "html-rendering", "web", "functional"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["html-escape/std"]
rocket_v05 = ["std", "dep:rocket_v05"]

[dependencies]
# Public
rocket_v05 = { package = "rocket", version = "0.5", default-features = false, optional = true }

# Private
html-escape = { version = "0.2", default-features = false }

[dev-dependencies]
rstest = { version = "0.23", default-features = false }
